# torchlambda

./: .gitignore  BENCHMARKS.md  LICENSE  MANIFEST.in  README.md  setup.py
.github/workflows/: deploy.yml  update.yml
scripts/analysis/: header.md  performance.py
scripts/ci/: build.sh  dependencies.sh
scripts/release/: update_version.sh
src/: .dockerignore  CMakeLists.txt  Dockerfile  _name.py  build.sh  dependencies.sh  main.py
src/arguments/: parser.py  subparsers.py
src/commands/: deploy.py  model.py  scheme.py
src/dependencies/: aws-lambda.sh  aws-sdk.sh  aws.sh  torch.sh
src/templates/: main.cpp  torchlambda.cpp  torchlambda.h  utils.h
src/utils/: __init__.py  deploy.py  docker.py  general.py  model.py
tests/: build.sh  dependencies.sh  run.sh
tests/cases/: big_image_base64.json  default.json  default_base64.json  no_output.json  no_output_base64.json  no_result.json  no_result_base64.json
tests/settings/automated/: run.sh
tests/settings/automated/src/: gather.py  model.py  payload.py  process.py  request.py  setup.py  setup_test.py  utils.py  validate.py
tests/src/: model.py  request.py  setup_settings.py  setup_test.py  utils.py
torchlambda/: .dockerignore  Dockerfile  __init__.py  _version.py  main.py
torchlambda/arguments/: parser.py  subparsers.py
torchlambda/commands/: __init__.py  build.py  deploy.py  layer.py  model.py  scheme.py  settings.py  template.py
torchlambda/dependencies/: aws-sdk.sh  torch.sh
torchlambda/implementation/: build.py  docker.py  layer.py  template.py
torchlambda/implementation/utils/template/: header.py  imputation.py  macro.py  validator.py
torchlambda/subcommands/: __init__.py  build.py  layer.py  settings.py  template.py
torchlambda/templates/cpp/: main.cpp
torchlambda/templates/settings/: main.cpp  torchlambda.yaml
torchlambda/templates/yaml/: main.cpp  settings.yaml
torchlambda/utils/: __init__.py  deploy.py  docker.py  general.py  layer.py  template.py
torchlambda/utils/_template/: __init__.py  header.py  imputation.py  macro.py  validator.py
